Bug 309550. Margins should not collapse through fieldset boundaries. r+sr=dbaron